--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       <a href="students/student_name.html">Student Name</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">TAG LINE</p>
                 </div>
                 <div class="clear"></div>
 
@@ -147,23 +147,23 @@
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/tony-turetsky.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/tony_turestsky_index.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Tony Turetsky</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">-LEARNING-TRYING-NOT FAILING-</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Me</p>
                 </div>
                 <div class="clear"></div>
               </li>
