--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/sean.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/sean_index_profile.png" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/sean.html">Sean</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Do or do not.  There is no trying.</p>
                 </div>
                 <div class="clear"></div>
 
@@ -130,7 +130,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/yung.html">Yung</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
@@ -155,7 +155,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Tony</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
@@ -180,7 +180,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Ryan</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
