--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Yung Leung</a>
+                      <a href="students/yung.html">Yung Leung</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
