finishing yung link

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Yung Leung</a>
+                      <a href="students/yung.html">Yung Leung</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Young Yung </p>
